--- a/composer.json
+++ b/composer.json
@@ -10,5 +10,8 @@
             "homepage": "https://github.com/MarinaPlanells",
             "role": "Developer"
         }
-    ]
+    ],
+    "require": {
+        "components/jquery": ">=1.10.0"
+    }
 }
